--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   mobx: ^2.0.7+5
   flutter_mobx: ^2.0.6+1
   sizer: ^2.0.15
+  flutter_native_splash: ^2.2.9
 
   flutter:
     sdk: flutter
