--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   # Modular organization
   flutter_modular: ^5.0.3
   # State management
-  mobx: ^2.0.7+5
+  mobx: ^2.1.4
   flutter_mobx: ^2.0.6+1
   sizer: ^2.0.15
   flutter_native_splash: ^2.2.9
