feature: created a local Storage Service

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,7 +9,17 @@
 # packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
+analyzer:
+  exclude: 
+    - "**/*.g.dart"
+
+  errors:
+    unnecessary_await_in_return: error
+    always_declare_return_types: error
 linter:
+
+
+
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
   # included above or to enable additional rules. A list of all available lints
@@ -22,6 +32,10 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
+    unnecessary_await_in_return: false
+    prefer_single_quotes: true
+    always_declare_return_types: true
+
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
