--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   flutter_mobx: ^2.0.6+1
   sizer: ^2.0.15
   flutter_native_splash: ^2.2.9
-
+  path_provider: ^2.0.10
   flutter:
     sdk: flutter
 
